--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -43,15 +43,7 @@
   to   { transform: translateX(calc(100vw + 140px)); }
 }
 
-.site-footer__inner {
-  width: min(100% - 2rem, 1200px);
-  margin-inline: auto;
-}
 
-.site-header__logo{
-  font-size: 1.25rem;
-  font-weight: 700;
-}
 
 .site-header__logo-accent {
   font-weight: 400;
@@ -66,9 +58,8 @@
 
 .site-header__menu-link{
   color: rgba(255, 255, 255, 0.6);
-  text-transform: uppercase;
-  font-size: .875rem;
-  letter-spacing: 2px;
+  font-size: .8125rem;
+  letter-spacing: 1px;
   transition: 300ms all ease;
 
   &:hover{
@@ -76,9 +67,8 @@
   }
 }
 
-.site-header__menu-link,
-.site-footer__link {
-  font-weight: 500;
+.site-header__menu-link{
+  font-weight: 300;
 }
 
 .site-header__menu-link:hover,
